--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "author": "Greger Hälltorp",
   "license": "ISC",
   "repository": {
-  "type": "git",
-  "url": "https://gregerhalltorp.visualstudio.com/DefaultCollection/_git/reactcourse"
+    "type": "git",
+    "url": "https://gregerhalltorp.visualstudio.com/DefaultCollection/_git/reactcourse"
   },
   "dependencies": {
+    "babel": "^6.3.26",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.3.1",
-    "gulp-open": "^1.0.0"
+    "gulp-open": "^1.0.0",
+    "reactify": "^1.1.1",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
