--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "babel": "^6.3.26",
+    "babel-plugin-transform-react-jsx": "^6.4.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "flux": "^2.0.3",
