--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browserify": "^13.0.0",
     "flux": "^2.0.3",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
     "gulp-eslint": "^1.1.1",
     "gulp-open": "^1.0.0",
