--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "babel-plugin-transform-react-jsx": "^6.4.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "eslint-plugin-react": "^3.16.1",
     "flux": "^2.0.3",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.3.1",
     "gulp-eslint": "^1.1.1",
     "gulp-open": "^1.0.0",
+    "jquery": "^2.2.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
-    "vinyl-source-stream": "^1.1.0",
-    "eslint-plugin-react": "^3.16.1"
+    "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
     "eslint-config-google": "^0.3.0"
