--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-connect": "^2.3.1",
     "gulp-open": "^1.0.0",
     "jquery": "^2.2.0",
+    "lodash": "^4.3.0",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
