--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
     "run-sequence": "^1.1.5",
+    "toastr": "^2.1.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "devDependencies": {
